Revision history for Neo4j::Driver

0.3151  2022-07-05

 - Improve IPv6 support

0.31  2022-06-13

 - Replace experimental net_module config option with plug-in interface
 - The cypher_params config option is no longer experimental
 - Announce plan to switch from JSON::PP::Boolean to Perl distinguished booleans

0.30  2022-05-20

 - Add experimental config option concurrent_tx to explicitly enable support
   for multiple concurrent transactions within the same HTTP session
 - Deprecate experimental config option jolt that allowed disabling Jolt
 - Deprecate experimental methods Result->attached() and Result->detach()
 - Deprecate method protocol() in experimental LWP net module
 - Rename method agent() to ua() in experimental LWP net module

0.28  2022-01-25

 - Deprecate experimental return of results in JSON "graph" format
 - Deprecate experimental query statistics flag return_stats
 - Add deprecation warning for experimental config option ca_file
 - Fix constructor fallback to default uri (issue #14)
 - Improve session creation performance

0.27  2021-08-28

 - Add config options for auth and uri
 - Allow config option hashes to be passed by reference
 - Allow passing config options to new()
 - Rename config option tls to encrypted
 - Rename config option tls_ca to trust_ca

0.26  2021-07-30

 - Change in experimental feature behaviour: Most methods that return lists
   now yield item count when called in scalar context
 - deprecate experimental list context syntax for run()
 - deprecate experimental methods Node->deleted() and Relationship->deleted()
 - deprecate experimental method ServerInfo->protocol();
   add method ServerInfo->protocol_version() as replacement
 - ServerInfo->version() is now a discouraged alias of ServerInfo->agent()
 - change syntax for experimental Cypher parameter conversion config option

0.25  2021-06-30

 - deprecate experimental Cypher type system customisation
 - deprecate experimental run() with array of multiple statements
